--- a/unit3/index.html
+++ b/unit3/index.html
@@ -2,18 +2,13 @@
 <html>
 <head>
 	<title>Ecom</title>
-	<link> rel="stylesheet" type="text/css" href="css/main.css"
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-	<img src="http://cdn2.hubspot.net/hub/149131/file-233449246-jpg/images/marketing_component_symbols.jpg">
+	<img src="images/marketing.jpg">
 	<h1>Ecom</h1>
 
 	<h2>"This is the Ecom of Edward Park.  The best online source for online customer service."</h2>
-	<h3>
-
-
-	<p> Contact us at edecom@gmail.com</p>
-	</h3>
-	</img>
+	<p>Contact us at edecom@gmail.com</p>
 </body>
 </html>
