--- a/unit3/index.html
+++ b/unit3/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Ecom</title>
-	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<img src="images/marketing.jpg">
