--- a/unit1/index.html
+++ b/unit1/index.html
@@ -1,9 +1,11 @@
-index.html
-
+<!DOCTYPE html>
 <html> 
 <head>
-<h1> Ecom </h1>
-<h3> "This is the Ecom of Edward Park"</h3>
-
-<title>
+  <title></title>
+  <link>
+</head>
 <body>
+  <h1>Ecom</h1>
+  <h2>"This is the Ecom of Edward Park"</h2>
+</body>
+</html>
