--- a/unit3/index.html
+++ b/unit3/index.html
@@ -5,10 +5,9 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<img src="images/marketing.jpg">
+	<img src="images/marketing.jpg" alt="">
 	<h1>Ecom</h1>
-
 	<h2>"This is the Ecom of Edward Park.  The best online source for online customer service."</h2>
-	<p>Contact us at edecom@gmail.com</p>
+	<p>Contact us at <a href="mailto:edecom@gmail.com" target="_blank">edecom@gmail.com</a></p>
 </body>
 </html>
