--- a/unit4/index.html
+++ b/unit4/index.html
@@ -3,6 +3,8 @@
 <head>
 	<title>Ecom</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href='http://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Playfair+Display:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<h1>Ecom</h1>
