--- a/unit4/index.html
+++ b/unit4/index.html
@@ -7,8 +7,18 @@
 	<link href='http://fonts.googleapis.com/css?family=Playfair+Display:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	<h1>Ecom</h1>
-	<h2>"This is the Ecom of Edward Park.  The best online source for online customer service."</h2>
-	<p>Contact us at <a href="mailto:edecom@gmail.com" target="_blank">edecom@gmail.com</a></p>
+	<section>
+		<h1>Ecom</h1>
+		<h2>"This is the Ecom of Edward Park.  The best online source for online customer service."</h2>
+		<p>Contact us at <a href="mailto:edecom@gmail.com" target="_blank">edecom@gmail.com</a></p>
+	</section>
+	<section>
+		<img src="images/Speakers.gif">
+		<img src="images/Television.jpg">
+		<img src="images/Video%20game.gif">
+		<img src="images/cell_phones.jpg">
+		<img src="images/computers.jpg">
+		<img src="images/ipod_timeline-5220492.jpg">
+	</section>
 </body>
 </html>
