--- a/unit5/index.html
+++ b/unit5/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<img src="EC-Logo.jpg"
 	<title>Ecom</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href='http://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Playfair+Display:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	
-		<nav>
+	<img src="EC-Logo.jpg" alt="EC Logo">	
+	<nav>
 		<a href="#">About Us</a>
 		<a href="contactus.html">Contact us</a>
 		<a href="onlineorder">Online Order</a>
@@ -18,31 +17,27 @@
 	<h2>"This is the Ecom of Edward Park.  The best online source for online customer service."</h2>
 	<p>Contact us at <a href="mailto:edecom@gmail.com" target="_blank">edecom@gmail.com</a></p>
 	
-	<div class="wrapper">
-	<float= left>
+	<div class="product">
 		<img src="images/cell_phones.jpg" alt="cell phone">
 		<p> "Cell phones are electronic devices, which can be used for phone calls, messaging anywhere and more"</p>
-	</float=>	
 	</div>
-	<div class="wrapper">
+	<div class="product">
 		<img src="images/computers.jpg" alt="computers">
 		<p> "Computers are technology machines where they are used for internet, PC games, typing, and files." </p>
 	</div>
-	<div class="wrapper">
-		<float= right>
+	<div class="product">
 		<img src="images/ipod_timeline-5220492.jpg" alt="ipod">
 		<p>"iPod is an electronic Apple device which can be used to listen to music collection and other audio purposes." </p>
-		</float=>
 	</div>
-	<div class="wrapper">
+	<div class="product">
 		<img src="images/Television.jpg" alt="television">
 		<p>"Television is an electronic device, which displays the screen for the variety of TV shows, movies, and also video games." </p>
 	</div>
-	<div class="wrapper">
+	<div class="product">
 		<img src="images/Video game.gif" alt="Video games">
 		<p>"Video games is a game device which players control characters and play games on either TV or portable video game."</p>
 	</div>
-	<div class="wrapper">
+	<div class="product">
 		<img src="images/Speakers.jpg" alt="Speakers">
 		<p>"Music speaker is an electronic music device to which the volume, the music songs, and the machine can be controlled."</p>
 	</div>
