--- a/unit7/index.html
+++ b/unit7/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Edicom</title>
-	<link rel="stylesheet" type="text/css" href="mobile style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href='http://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Playfair+Display:400,700' rel='stylesheet' type='text/css'>
 </head>
