--- a/Unit10/index.html
+++ b/Unit10/index.html
@@ -13,3 +13,8 @@
 
 
 	<img src="Edward Park.jpg" alt="Edward Park">
+
+	<p>Hello</p>
+	<p2>Thanks for requesting my service.  I have read your message and I'll be right with you soon.  Looking to give assistance.
+
+	Edward Park, Founder of Edicom</p2>
