--- a/Unit10/index.html
+++ b/Unit10/index.html
@@ -18,3 +18,4 @@
 	<p2>Thanks for requesting my service.  I have read your message and I'll be right with you soon.  Looking to give assistance.
 
 	Edward Park, Founder of Edicom</p2>
+	</body>
