--- a/Unit10/index.html
+++ b/Unit10/index.html
@@ -15,7 +15,7 @@
 	<img src="Edward Park.jpg" alt="Edward Park">
 
 	<p>Hello</p>
-	<p2>Thanks for requesting my service.  I have read your message and I'll be right with you soon.  Looking to give assistance.
+	<p>Thanks for requesting my service.  I have read your message and I'll be right with you soon.  Looking to give assistance.<p>
 
-	Edward Park, Founder of Edicom</p2>
+	<p2>Edward Park, Founder of Edicom</p2>
 	</body>
