--- a/Unit10/index.html
+++ b/Unit10/index.html
@@ -4,8 +4,9 @@
 	<title>Edicom</title>
 </head>
 <body>
-	<img src="EC-Logo.jpg" alt="EC Logo">
 	<nav>
+		<a href="unit7 index.html"><img src="EC-Logo.jpg" alt="EC Logo"></a>
+	
 		<a href="#">About Us</a>
 		<a href="contact us.html">Contact us</a>
 		<a href="online order.html">Online Order</a>
