--- a/unit7/index.html
+++ b/unit7/index.html
@@ -8,8 +8,9 @@
 	<link href='http://fonts.googleapis.com/css?family=Playfair+Display:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	<img src="EC-Logo.jpg" alt="EC Logo">	
+		
 	<nav>
+		<a href="index.html"<img src="EC-Logo.jpg" alt="EC Logo"></a>
 		<a href="#">About Us</a>
 		<a href="contactus.html">Contact us</a>
 		<a href="onlineorder">Online Order</a>
