--- a/unit7/index.html
+++ b/unit7/index.html
@@ -10,7 +10,7 @@
 <body>
 		
 	<nav>
-		<a href="index.html"<img src="EC-Logo.jpg" alt="EC Logo"></a>
+		<a href="index.html"><img src="EC-Logo.jpg" alt="EC Logo"></a>
 		<a href="#">About Us</a>
 		<a href="contactus.html">Contact us</a>
 		<a href="onlineorder">Online Order</a>
