--- a/Unit10/index.html
+++ b/Unit10/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<nav>
-		<a href="unit7 index.html"><img src="EC-Logo.jpg" alt="EC Logo"></a>
+		<a href="http://tpark12.github.io/unit7/index.html"><img src="EC-Logo.jpg" alt="EC Logo"></a>
 	
 		<a href="#">About Us</a>
 		<a href="contact us.html">Contact us</a>
