--- a/Unit10/index.html
+++ b/Unit10/index.html
@@ -7,7 +7,8 @@
 <body>
 	<nav>
 		<a href="http://tpark12.github.io/unit7/index.html"><img src="EC-Logo.jpg" alt="EC Logo"></a>
-	
+		<link href='http://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Playfair+Display:400,700' rel='stylesheet' type='text/css'>
 		<a href="#">About Us</a>
 		<a href="contact us.html">Contact us</a>
 		<a href="online order.html">Online Order</a>
