--- a/Unit10/index.html
+++ b/Unit10/index.html
@@ -15,7 +15,10 @@
 	</nav>
 
 
-	<img src="Edward Park.jpg" alt="Edward Park">
+	
+	<img src="cell phone ads.jpg" alt="Cell Phone ads">
+	<img src="Video games ad.jpg" alt="Video games ad">
+	<img src="Computer Cell phone ads.jpg" alt="Computer Cell phone ads">
 
 	<p>Hello</p>
 	<p>Thanks for requesting my service.  I have read your message and I'll be right with you soon.  Looking to give assistance.<p>
