--- a/Unit10/index.html
+++ b/Unit10/index.html
@@ -15,7 +15,7 @@
 	</nav>
 
 
-	
+	<img src="Edward Park.jpg" alt="Edward Park">
 	<img src="cell phone ads.jpg" alt="Cell Phone ads">
 	<img src="Video games ad.jpg" alt="Video games ad">
 	<img src="Computer Cell phone ads.jpg" alt="Computer Cell phone ads">
