--- a/unit7/index.html
+++ b/unit7/index.html
@@ -20,27 +20,27 @@
 	<p>Contact us at <a href="mailto:edecom@gmail.com" target="_blank">edecom@gmail.com</a></p>
 	
 	<div class="product">
-		<img src="images/cell_phones.jpg" alt="cell phone">
+		<a href=<img src="images/cell_phones.jpg" alt="cell phone"></a>
 		<p> "Cell phones are electronic devices, which can be used for phone calls, messaging anywhere and more"</p>
 	</div>
 	<div class="product">
-		<img src="images/computers.jpg" alt="computers">
+		<a href=<img src="images/computers.jpg" alt="computers"></a>
 		<p> "Computers are technology machines where they are used for internet, PC games, typing, and files." </p>
 	</div>
 	<div class="product">
-		<img src="images/ipod_timeline-5220492.jpg" alt="ipod">
+		<a href=<img src="images/ipod_timeline-5220492.jpg" alt="ipod"></a>
 		<p>"iPod is an electronic Apple device which can be used to listen to music collection and other audio purposes." </p>
 	</div>
 	<div class="product">
-		<img src="images/Television.jpg" alt="television">
+		<a href=<img src="images/Television.jpg" alt="television"></a>
 		<p>"Television is an electronic device, which displays the screen for the variety of TV shows, movies, and also video games." </p>
 	</div>
 	<div class="product">
-		<img src="images/Video game.gif" alt="Video games">
+		<a href=<img src="images/Video game.gif" alt="Video games"></a>
 		<p>"Video games is a game device which players control characters and play games on either TV or portable video game."</p>
 	</div>
 	<div class="product">
-		<img src="images/Speakers.jpg" alt="Speakers">
+		<a href=<img src="images/Speakers.jpg" alt="Speakers"></a>
 		<p>"Music speaker is an electronic music device to which the volume, the music songs, and the machine can be controlled."</p>
 	</div>
 
