--- a/unit7/index.html
+++ b/unit7/index.html
@@ -44,6 +44,14 @@
 		<p>"Music speaker is an electronic music device to which the volume, the music songs, and the machine can be controlled."</p>
 	</div>
 
+	<columns class="items">
+		<a href="cellphones.html">Cell Phones</a>
+		<a href="computers.html">Computers</a>
+		<a href="ipod.html">iPod</a>
+		<a href="television.html">Television</a>
+		<a href="videogames.html">Video Games</a>
+		<a href="speakers.html">Speakers</a>
+
 	<section id="about">
 		<h2></h2>
 	</section>
