--- a/unit7/index.html
+++ b/unit7/index.html
@@ -25,6 +25,7 @@
 		<a href="television.html">Television</a>
 		<a href="videogames.html">Video Games</a>
 		<a href="speakers.html">Speakers</a>
+	</columns>
 
 	<div class="product">
 		<a href="cellphones.html"><img src="images/cell_phones.jpg" alt="cell phone"></a>
