--- a/unit7/index.html
+++ b/unit7/index.html
@@ -20,12 +20,12 @@
 	<p>Contact us at <a href="mailto:edecom@gmail.com" target="_blank">edecom@gmail.com</a></p>		
 	<columns class="items">
 		<ul>
-		<a href="cellphones.html">Cell Phones</a>
-		<a href="computers.html">Computers</a>
-		<a href="ipod.html">iPod</a>
-		<a href="television.html">Television</a>
-		<a href="videogames.html">Video Games</a>
-		<a href="speakers.html">Speakers</a>
+		<li><a href="cellphones.html">Cell Phones</a></li>
+		<li><a href="computers.html">Computers</a></li>
+		<li><a href="ipod.html">iPod</a></li>
+		<li><a href="television.html">Television</a></li>
+		<li><a href="videogames.html">Video Games</a></li>
+		<li><a href="speakers.html">Speakers</a></li>
 		</ul>
 	</columns>
 
