--- a/unit7/index.html
+++ b/unit7/index.html
@@ -20,12 +20,12 @@
 	<p>Contact us at <a href="mailto:edecom@gmail.com" target="_blank">edecom@gmail.com</a></p>		
 	<columns class="items">
 		<ul>
-		<li><a href="cellphones.html">Cell Phones</a></li>
-		<li><a href="computers.html">Computers</a></li>
-		<li><a href="ipod.html">iPod</a></li>
-		<li><a href="television.html">Television</a></li>
-		<li><a href="videogames.html">Video Games</a></li>
-		<li><a href="speakers.html">Speakers</a></li>
+		<li><a href="cellphones.html"><span>Cell Phones</span></a></li>
+		<li><a href="computers.html"><span>Computers</span></a></li>
+		<li><a href="ipod.html"><span>iPod</span></a></li>
+		<li><a href="television.html"><span>Television</span></a></li>
+		<li><a href="videogames.html"><span>Video Games</span></a></li>
+		<li><a href="speakers.html"><span>Speakers</span></a></li>
 		</ul>
 	</columns>
 
