--- a/Final project/index.html
+++ b/Final project/index.html
@@ -1,5 +1,12 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<meta name=viewport content="width=device-width, initial-scale=1">
+	<title>Edicom</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href='http://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Playfair+Display:400,700' rel='stylesheet' type='text/css'>
 </head>
-<body>
 		
 	<nav>
 		<a href="index.html"><img src="EC-Logo.jpg" alt="EC Logo"></a>
@@ -11,3 +18,4 @@
 	<h2>"This is the Edicom which was founded by Edward Park since 2015.
 	This is the best online source for the electronic products with the best online customer service."</h2>
 	<p>Contact us at <a href="mailto:edecom@gmail.com" target="_blank">edecom@gmail.com</a></p>
+</html>
