--- a/Final project/aboutus.html
+++ b/Final project/aboutus.html
@@ -7,7 +7,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Playfair+Display:400,700' rel='stylesheet' type='text/css'>
 </head>
-		
+<body>		
 	<nav>
 		<a href="index.html"><img src="EC-Logo.jpg" alt="EC Logo"></a>
 		<a href="aboutus.html">About Us</a>
@@ -18,4 +18,5 @@
 	<h2>"This is the Edicom which was founded by Edward Park since 2015.
 	This is the best online source for the electronic products with the best online customer service."</h2>
 	<p>Contact us at <a href="mailto:edecom@gmail.com" target="_blank">edecom@gmail.com</a></p>
+</body>
 </html>
