--- a/Final project/index.html
+++ b/Final project/index.html
@@ -11,7 +11,7 @@
 		
 	<nav>
 		<a href="index.html"><img src="EC-Logo.jpg" alt="EC Logo"></a>
-		<a href="#">About Us</a>
+		<a href="aboutus.html">About Us</a>
 		<a href="contactus.html">Contact us</a>
 		<a href="onlineorder">Online Order</a>
 	</nav>
