--- a/Final project/contactus.html
+++ b/Final project/contactus.html
@@ -15,5 +15,5 @@
 		<a href="onlineorder">Online Order</a>
 	</nav>
 	<h1>Edicom</h1>
-	<p>You may contact us at <a href="mailto:edecom@gmail.com" target="_blank">edecom@gmail.com
-	or 201-834-0844</a></p>
+	<p>You may contact us at <a href="mailto:edecom@gmail.com" target="_blank">edecom@gmail.com</a>
+	or 201-834-0844</p>
