--- a/Final project/cellphones.html
+++ b/Final project/cellphones.html
@@ -17,9 +17,10 @@
 	</nav>
 <columns class="cell phones">
 	<img src="Samsung-Galaxy-S6.jpg" alt="Samsung Galaxy">
+	<img src="iPhone.png" alt="iPhone">
 	<li><a href="samsunggalaxy.html"><span>Samsung Galaxy</span></a></li>
 	<li><a href="iphone.html"><span>iPhone</span></a></li>
-	
+
 
 </body>
 </html>
