--- a/Final project/cellphones.html
+++ b/Final project/cellphones.html
@@ -16,7 +16,7 @@
 		<a href="onlineorder">Online Order</a>
 	</nav>
 <columns class="cell phones">
-	<img src="Samsung-Galaxy-S6.jpg" alt="Samsung Galaxy">
+	<img src="Samsung Galaxy.png" alt="Samsung Galaxy">
 	<img src="iPhone.png" alt="iPhone">
 	<li><a href="samsunggalaxy.html"><span>Samsung Galaxy</span></a></li>
 	<li><a href="iphone.html"><span>iPhone</span></a></li>
