--- a/Final project/cellphones.html
+++ b/Final project/cellphones.html
@@ -18,8 +18,13 @@
 <columns class="cell phones">
 	<img src="Samsung Galaxy.png" alt="Samsung Galaxy">
 	<img src="iPhone.png" alt="iPhone">
+	<img src="HTC.jpg" alt="HTC">
 	<li><a href="samsunggalaxy.html"><span>Samsung Galaxy</span></a></li>
 	<li><a href="iphone.html"><span>iPhone</span></a></li>
+	<li><a href="HTC.html"><span>HTC</span></a></li>
+</columns>
+
+<columns class="Wireless providers">
 
 
 </body>
