--- a/Final project/cellphones.html
+++ b/Final project/cellphones.html
@@ -25,7 +25,9 @@
 </columns>
 
 <columns class="Wireless providers">
+	<img src="Verizon Wireless.gif" alt="Verizon Wireless">
 
+	<li><a href="verizon.html"><span>Verizon Wireless</span></a></li>
 
 </body>
 </html>
