--- a/Final project/cellphones.html
+++ b/Final project/cellphones.html
@@ -28,6 +28,7 @@
 	<img src="Verizon Wireless.gif" alt="Verizon Wireless">
 
 	<li><a href="verizon.html"><span>Verizon Wireless</span></a></li>
+</columns>
 
 </body>
 </html>
