--- a/Final project/cellphones.html
+++ b/Final project/cellphones.html
@@ -26,8 +26,13 @@
 
 <columns class="Wireless providers">
 	<img src="Verizon Wireless.gif" alt="Verizon Wireless">
-
+	<img src="at&t logo.jpg" alt="AT&T">
+	<img src="Sprint logo.jpg" alt="Sprint">
+	<img src="T-Mobile.jpg" alt="T-Mobile">
 	<li><a href="verizon.html"><span>Verizon Wireless</span></a></li>
+	<li><a href="at&t.html"><span>AT&T</span></a></li>
+	<li><a href="Sprint.html"><span>Sprint</span></a></li>
+	<li><a href="T-Mobile.html"><span>T-Mobile</span></a></li>
 </columns>
 
 </body>
