--- a/Final project/cellphones.html
+++ b/Final project/cellphones.html
@@ -15,14 +15,14 @@
 		<a href="contactus.html">Contact us</a>
 		<a href="onlineorder">Online Order</a>
 	</nav>
-<columns class="cell phones">
+<div class="cell phones">
 	<img src="Samsung Galaxy.png" alt="Samsung Galaxy">
 	<img src="iPhone.png" alt="iPhone">
 	<img src="HTC.jpg" alt="HTC">
 	<li><a href="samsunggalaxy.html"><span>Samsung Galaxy</span></a></li>
 	<li><a href="iphone.html"><span>iPhone</span></a></li>
 	<li><a href="HTC.html"><span>HTC</span></a></li>
-</columns>
+</div>
 
 <div class="Wireless providers">
 	<img src="Verizon Wireless.gif" alt="Verizon Wireless">
@@ -33,7 +33,7 @@
 	<li><a href="at&t.html"><span>AT&T</span></a></li>
 	<li><a href="Sprint.html"><span>Sprint</span></a></li>
 	<li><a href="T-Mobile.html"><span>T-Mobile</span></a></li>
-</columns>
+</div>
 
 </body>
 </html>
