--- a/Final project/cellphones.html
+++ b/Final project/cellphones.html
@@ -17,10 +17,14 @@
 	</nav>
 <div class="cell phones">
 	<img src="Samsung Galaxy.png" alt="Samsung Galaxy">
-	<img src="iPhone.png" alt="iPhone">
-	<img src="HTC.jpg" alt="HTC">
 	<li><a href="samsunggalaxy.html"><span>Samsung Galaxy</span></a></li>
+</div>
+<div class="cell phones">
+	<img src="iPhone.png" alt="iPhone">
 	<li><a href="iphone.html"><span>iPhone</span></a></li>
+</div>
+<div class="cell phones">
+	<img src="HTC.jpg" alt="HTC">
 	<li><a href="HTC.html"><span>HTC</span></a></li>
 </div>
 
