--- a/Final project/cellphones.html
+++ b/Final project/cellphones.html
@@ -30,12 +30,16 @@
 
 <div class="Wireless providers">
 	<img src="Verizon Wireless.gif" alt="Verizon Wireless">
-	<img src="at&t logo.jpg" alt="AT&T">
-	<img src="Sprint logo.jpg" alt="Sprint">
-	<img src="T-Mobile.jpg" alt="T-Mobile">
 	<li><a href="verizon.html"><span>Verizon Wireless</span></a></li>
+</div>
+	<img src="at&t logo.jpg" alt="AT&T">
 	<li><a href="at&t.html"><span>AT&T</span></a></li>
+</div>
+	<img src="Sprint logo.jpg" alt="Sprint">
 	<li><a href="Sprint.html"><span>Sprint</span></a></li>
+</div>
+<div>
+	<img src="T-Mobile.jpg" alt="T-Mobile">
 	<li><a href="T-Mobile.html"><span>T-Mobile</span></a></li>
 </div>
 
