--- a/Final project/videogames.html
+++ b/Final project/videogames.html
@@ -24,7 +24,7 @@
 	<li><a href="playstation.html"><span>PlayStation</span></a></li>
 </div>
 <div class="videogames">
-	<img src="Microsoft_XBOX_logo.jpg" alt="Microsoft XBOX">
+	<img src="Microsoft_Xbox_logo.jpg" alt="Microsoft XBOX">
 	<li><a href="microsoftxbox.html"><span>Microsoft XBOX</span></a></li>
 <div class="videogames">
 	<img src="Nintendo Wii logo.jpg" alt="Nintendo Wii">
