--- a/Final project/videogames.html
+++ b/Final project/videogames.html
@@ -17,17 +17,17 @@
 	</nav>
 <div class="videogames">
 	<img src="PC games.gif" alt="PC Games">
-	<li><a href="PCgames.html"><span>PC Games</span></a></li>
+	<a href="PCgames.html"><span>PC Games</span></a>
 </div>
 <div class="videogames">
 	<img src="Playstation logo.jpg" alt="Playstation">
-	<li><a href="playstation.html"><span>PlayStation</span></a></li>
+	<a href="playstation.html"><span>PlayStation</span></a>
 </div>
 <div class="videogames">
 	<img src="Microsoft_Xbox_logo.jpg" alt="Microsoft XBOX">
-	<li><a href="microsoftxbox.html"><span>Microsoft XBOX</span></a></li>
+	<a href="microsoftxbox.html"><span>Microsoft XBOX</span></a>
 <div class="videogames">
 	<img src="Nintendo Wii logo.jpg" alt="Nintendo Wii">
-	<li><a href="nintendowii.html"><span>Nintendo Wii</span></a></li>
+	<a href="nintendowii.html"><span>Nintendo Wii</span></a>
 <div class="videogames">
 	<img src=""
