--- a/Final project/videogames.html
+++ b/Final project/videogames.html
@@ -29,5 +29,10 @@
 <div class="videogames">
 	<img src="Nintendo Wii logo.jpg" alt="Nintendo Wii">
 	<a href="nintendowii.html"><span>Nintendo Wii</span></a>
+</div>
 <div class="videogames">
-	<img src=""
+	<img src="frisby controller.jpg" alt="Frisby">
+</div>
+<div class="videogames">
+	<img src="Wiiremote.jpg" alt="Wii Remote">
+</div>
