--- a/Final project/videogames.html
+++ b/Final project/videogames.html
@@ -20,21 +20,13 @@
 	<a href="PCgames.html"><span>PC Games</span></a>
 	<img src="Playstation logo.jpg" alt="Playstation">
 	<a href="playstation.html"><span>PlayStation</span></a>
-</div>
-<div class="videogames">
-	
-</div>
-<div class="videogames">
 	<img src="Microsoft_Xbox_logo.jpg" alt="Microsoft XBOX">
 	<a href="microsoftxbox.html"><span>Microsoft XBOX</span></a>
-<div class="videogames">
 	<img src="Nintendo Wii logo.jpg" alt="Nintendo Wii">
 	<a href="nintendowii.html"><span>Nintendo Wii</span></a>
 </div>
 <div class="videogames">
 	<img src="frisby controller.jpg" alt="Frisby">
 	<img src="Wiiremote.jpg" alt="Wii Remote">
-</div>
-<div class="videogames">
-	
+	<img src="PS4Controller.jpg" alt="Playstation 4">
 </div>
