--- a/Final project/cellphones.html
+++ b/Final project/cellphones.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta name=viewport content="width=device-width, initial-scale=1">
-	<title>Edicom</title>
+	<title>Edicom- Cell Phones</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href='http://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Playfair+Display:400,700' rel='stylesheet' type='text/css'>
