--- a/Final project/videogames.html
+++ b/Final project/videogames.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta name=viewport content="width=device-width, initial-scale=1">
-	<title>Edicom</title>
+	<title>Edicom- Video Games</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href='http://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Playfair+Display:400,700' rel='stylesheet' type='text/css'>
@@ -27,6 +27,10 @@
 </div>
 <div class="videogames">
 	<img src="frisby controller.jpg" alt="Frisby">
+	<p> Frisby $9.99 Save $5 from $14.99.</p>
 	<img src="Wiiremote.jpg" alt="Wii Remote">
-	<img src="PS4Controller.jpg" alt="Playstation 4">
+	<p> Wii Remote $24.99 Save $15 from $39.99</p>
+	<img src="PS4Controller.png" alt="Playstation 4">
+	<p> PS4 Controller $39.99 Reg price: $59.99</p>
+	<img src="Xboxonecontroller.jpg" alt="XBOX One Controller">
 </div>
