--- a/Final project/videogames.html
+++ b/Final project/videogames.html
@@ -27,10 +27,10 @@
 </div>
 <div class="videogames">
 	<img src="frisby controller.jpg" alt="Frisby">
-	<p> Frisby $9.99 Save $5 from $14.99.</p>
+	<a> Frisby $9.99 Save $5 from $14.99.</a>
 	<img src="Wiiremote.jpg" alt="Wii Remote">
-	<p> Wii Remote $24.99 Save $15 from $39.99</p>
+	<a> Wii Remote $24.99 Save $15 from $39.99</a>
 	<img src="PS4Controller.png" alt="Playstation 4">
-	<p> PS4 Controller $39.99 Reg price: $59.99</p>
+	<a> PS4 Controller $39.99 Reg price: $59.99</a>
 	<img src="Xboxonecontroller.jpg" alt="XBOX One Controller">
 </div>
