--- a/Final project/videogames.html
+++ b/Final project/videogames.html
@@ -29,7 +29,7 @@
 	<img src="frisby controller.jpg" alt="Frisby">
 	<a> Frisby $9.99 Save $5 from $14.99.</a>
 	<img src="Wiiremote.jpg" alt="Wii Remote">
-	<a> Wii Remote $24.99 Save $15 from $39.99</a>
+	<a> Wii Remote $24.99 Reg price: $39.99</a>
 	<img src="PS4Controller.png" alt="Playstation 4">
 	<a> PS4 Controller $39.99 Reg price: $59.99</a>
 	<img src="Xboxonecontroller.jpg" alt="XBOX One Controller">
