--- a/Final project/videogames.html
+++ b/Final project/videogames.html
@@ -25,7 +25,7 @@
 	<img src="Nintendo Wii logo.jpg" alt="Nintendo Wii">
 	<a href="nintendowii.html"><span>Nintendo Wii</span></a>
 </div>
-<div class="videogames">
+<div class="controllers">
 	<img src="frisby controller.jpg" alt="Frisby">
 	<a> Frisby $9.99 Save $5 from $14.99.</a>
 	<img src="Wiiremote.jpg" alt="Wii Remote">
