--- a/Final project/videogames.html
+++ b/Final project/videogames.html
@@ -18,6 +18,7 @@
 <div class="videogames">
 	<img src="PC games.gif" alt="PC Games">
 	<a href="PCgames.html"><span>PC Games</span></a>
+	</div>
 	<img src="Playstation logo.jpg" alt="Playstation">
 	<a href="playstation.html"><span>PlayStation</span></a>
 	<img src="Microsoft_Xbox_logo.jpg" alt="Microsoft XBOX">
