--- a/Final project/videogames.html
+++ b/Final project/videogames.html
@@ -17,7 +17,7 @@
 	</nav>
 <div class="videogames">
 	<img src="PC games.gif" alt="PC Games">
-	<a href="PCgames.html"><span>PC Games</span></a>
+	<li><a href="PCgames.html"><span>PC Games</span></a></li>
 	</div>
 	<img src="Playstation logo.jpg" alt="Playstation">
 	<a href="playstation.html"><span>PlayStation</span></a>
