--- a/Final project/videogames.html
+++ b/Final project/videogames.html
@@ -18,9 +18,12 @@
 <div class="videogames">
 	<img src="PC games.gif" alt="PC Games">
 	<li><a href="PCgames.html"><span>PC Games</span></a></li>
-	</div>
+</div>
+<div class="videogames">
 	<img src="Playstation logo.jpg" alt="Playstation">
-	<a href="playstation.html"><span>PlayStation</span></a>
+	<li><a href="playstation.html"><span>PlayStation</span></a></li>
+</div>
+<div class="videogames">
 	<img src="Microsoft_Xbox_logo.jpg" alt="Microsoft XBOX">
 	<a href="microsoftxbox.html"><span>Microsoft XBOX</span></a>
 	<img src="Nintendo Wii logo.jpg" alt="Nintendo Wii">
