--- a/Final project/videogames.html
+++ b/Final project/videogames.html
@@ -21,7 +21,7 @@
 </div>
 <div class="videogames">
 	<img src="Playstation logo.jpg" alt="Playstation">
-	<li><a href="playstation.html"><span>PlayStation</span></a></li>
+	<a href="playstation.html"><span>PlayStation</span></a>
 
 
 	<img src="Microsoft_Xbox_logo.jpg" alt="Microsoft XBOX">
