--- a/Final project/videogames.html
+++ b/Final project/videogames.html
@@ -28,7 +28,7 @@
 
 
 <div class="controllers">
-	<img src="frisby controller.jpg" alt="Frisby">
+	<img src="frisby controller.jpg" alt="Frisby" hspace="10">
 	<p> Frisby $9.99 Save $5 from $14.99.</p>
 </div>
 <div class="controllers">
