--- a/Final project/videogames.html
+++ b/Final project/videogames.html
@@ -27,7 +27,7 @@
 </div>
 
 
-<div class="controllers">
+<div class="videogames">
 	<img src="frisby controller.jpg" alt="Frisby" hspace="10">
 	<p> Frisby $9.99 Save $5 from $14.99.</p>
 	<img src="Wiiremote.jpg" alt="Wii Remote">
