--- a/Final project/videogames.html
+++ b/Final project/videogames.html
@@ -28,7 +28,7 @@
 
 
 <div class="videogames">
-	<img src="frisby controller.jpg" alt="Frisby" hspace="10">
+	<img src="frisby controller.jpg" alt="Frisby">
 	<p> Frisby $9.99 Save $5 from $14.99.</p>
 	<img src="Wiiremote.jpg" alt="Wii Remote">
 	<p> Wii Remote $24.99 Reg price: $39.99</p>
