--- a/Final project/videogames.html
+++ b/Final project/videogames.html
@@ -32,4 +32,5 @@
 	<img src="PS4Controller.png" alt="Playstation 4">
 	<p> PS4 Controller $39.99 Reg price: $59.99</p>
 	<img src="Xboxonecontroller.jpg" alt="XBOX One Controller">
+	<p> XBOX one $44.99 Reg price: $59.99</p>
 </div>
