--- a/Final project/television.html
+++ b/Final project/television.html
@@ -28,3 +28,8 @@
 
 <div class="videogames">
 	<img src="Samsung Flat Screen TV.jpg" alt="Samsung TV">
+</div>
+
+<div class="items">
+	<img src="Samsung.jpg" alt="Samsung">
+</div>
