--- a/Final project/television.html
+++ b/Final project/television.html
@@ -29,8 +29,6 @@
 <div class="videogames">
 	<img src="Samsung Flat Screen TV.jpg" alt="Samsung TV">
 </div>
-
-
-<div class="items">
-	<img src="Samsung.jpg" alt="Samsung">
+<div class="videogames">
+	<img src="Samsung logo.jpg" alt="Samsung">
 </div>
