--- a/Final project/television.html
+++ b/Final project/television.html
@@ -32,3 +32,6 @@
 <div class="videogames">
 	<img src="Samsung logo.jpg" alt="Samsung">
 </div>
+<div class="videogames">
+	<img src="Sony logo.jpg" alt="Sony">
+</div>
