--- a/Final project/television.html
+++ b/Final project/television.html
@@ -29,9 +29,9 @@
 <div class="videogames">
 	<img src="Samsung Flat Screen TV.jpg" alt="Samsung TV">
 </div>
-<div class="wireless providers">
+<columns class="wireless providers">
 	<img src="Samsung logo.jpg" alt="Samsung">
-</div>
-<div class="wireless providers">
+</columns>
+<columns class="wireless providers">
 	<img src="Sony logo.jpg" alt="Sony">
-</div>
+</columns>
