--- a/Final project/television.html
+++ b/Final project/television.html
@@ -29,9 +29,8 @@
 <div class="videogames">
 	<img src="Samsung Flat Screen TV.jpg" alt="Samsung TV">
 </div>
-<columns class="wireless providers">
+<div class="wireless providers">
 	<img src="Samsung logo.jpg" alt="Samsung">
-</columns>
-<columns class="wireless providers">
+
 	<img src="Sony logo.jpg" alt="Sony">
 </columns>
