--- a/Final project/television.html
+++ b/Final project/television.html
@@ -31,6 +31,7 @@
 </div>
 <div class="wireless providers">
 	<img src="Samsung logo.jpg" alt="Samsung">
-
 	<img src="Sony logo.jpg" alt="Sony">
+	<img src="Toshiba.jpg" alt="Toshiba">
+	<img src="Sharp.jpg" alt="Sharp">
 </div>
