--- a/Final project/television.html
+++ b/Final project/television.html
@@ -34,4 +34,7 @@
 	<img src="Sony logo.jpg" alt="Sony">
 	<img src="Toshiba.jpg" alt="Toshiba">
 	<img src="Sharp.jpg" alt="Sharp">
+	<img src="lg.jpg" alt="LG">
+	<img src="Vizio.gif" alt="Vizio">
+	<img src="Panasonic.jpg" alt="Panasonic">
 </div>
