--- a/Final project/television.html
+++ b/Final project/television.html
@@ -37,4 +37,5 @@
 	<img src="lg.jpg" alt="LG">
 	<img src="Vizio.gif" alt="Vizio">
 	<img src="Panasonic.jpg" alt="Panasonic">
+	<img src="Magnavox.gif" alt="Magnavox">
 </div>
