--- a/MontyPython/index.html
+++ b/MontyPython/index.html
@@ -8,7 +8,7 @@
 <body>
 	<section id="splash">
 	<div>
-	<h1>"And now for something completely different"</h1>
+	<h1>And now for something completely different</h1>
 	</section>
 
 	<section id="mainContent">
