--- a/MontyPython/index.html
+++ b/MontyPython/index.html
@@ -12,6 +12,7 @@
 	</section>
 
 	<section id="mainContent">
+		<div class="clearfix">
 		<section class="columns">
 		<h2>A moose once bit my sister</h2>
 		<p>No realli! She was Karving her initials on the moose with the sharpened end of an interspace toothbrush giver her by Svenge - her brother-in-law - an Oslo dentist and star of many Norwegian movies: "The Hot Hands of an Oslo Dentist", "Fillings of Passion", "The Huge Molars of Horst Nordfink"...</p>
