--- a/MontyPython/index.html
+++ b/MontyPython/index.html
@@ -13,17 +13,23 @@
 
 	<section id="mainContent">
 		<div class="clearfix">
-		<section class="columns">
-		<h2>A moose once bit my sister</h2>
-		<p>No realli! She was Karving her initials on the moose with the sharpened end of an interspace toothbrush giver her by Svenge - her brother-in-law - an Oslo dentist and star of many Norwegian movies: "The Hot Hands of an Oslo Dentist", "Fillings of Passion", "The Huge Molars of Horst Nordfink"...</p>
-		<p>Mynd you, moose bites Kan be pretti nasti...</p>
-		<a href="#" class="cta2">Learn More</a>
-		</section>
-		<section class="columns">
+			<section class="columns">
+				<h2>A moose once bit my sister</h2>
+				<p>No realli! She was Karving her initials on the moose with the sharpened end of an interspace toothbrush giver her by Svenge - her brother-in-law - an Oslo dentist and star of many Norwegian movies: "The Hot Hands of an Oslo Dentist", "Fillings of Passion", "The Huge Molars of Horst Nordfink"...</p>
+				<p>Mynd you, moose bites Kan be pretti nasti...</p>
+				<a href="#" class="cta2">Learn More</a>
+			</section>
+			<section class="columns">
 				<h2>It's only a model</h2>
 				<p>We're Knights of the Round Table.  We dance whene'er we're able.  We do routines and chorus scenes with footwork impeccable.  We dine well here in Camelot.  We eat ham and jam and spam a lot.  We're Knights of the Round Table.  Our shows are formidable, but many times we're given rhymes that are quite unsingable.  We're opera mad in Camelot.  We sing from the diaphragm a lot.</p>
 				<a href="#" class="cta2">Act Now</a>
-		</section>
+			</section>
 
+			<section class="columns">
+				<h2>It's probably pining for the fjords</h2>
+				<p>It's not pining, it's passed on.  This parrot is no more! It has ceased to be.  It's expired and gone to meet its maker.  This is late parrot.  It's a stiff.  Bereft of life, it rests in peace.  If you hadn't nailed it to the perch it would pushing up the daisies.  It's rung down the curtain and joined the choir invisible.  This is an ex-parot.
+				</p>
+				<a href="#" class="cta2">Find Out How</a>
+			</section>
 		</div>
 </body>
