--- a/MontyPython/index.html
+++ b/MontyPython/index.html
@@ -32,4 +32,30 @@
 			</section>
 		</div>
 	</section>
+	<section id="cast" class="clearfix">
+		<div>
+				<section class="players">
+					<img src="images/chapman.jpg" alt="Graham Chapman">
+					<h2>Graham Chapman</h2>
+					<p>May I take this opportunity of emphasizing that there is no cannibalism in the British Navy.  Absoluetely none, and when I say none, I mean there is a certain amount, more than we are prepared to admit, but all new ratings are warned that if they wake up in the morning and find any tooth marks at all anywhere on their bodies, they're to tell me immediately so that I can immediately take every measure to hush the whole thing up.</p>
+					<a><img src="images/play.png" alt="play button for above quote"></a>
+				</section>
+				<section class="players">
+					<img src="images/palin.jpg" alt="Michael Palin">
+					<h2>Michael Palin</h2>
+					<p>Listen, strange women lying in ponds distributing swords is no basis for a system of government.  Supreme executive power derives from a mandate from the masses, not from some farcical aquatic ceremony.  Well you can't expect to wield supreme executive power just because some watery tart threw a sword at you.  I mean if I went 'round saying I was an emperor, just because some moistened bint had lobbed a scimitar at me, they'd put me away!</p>
+					<a><img src="images/play.png" alt="play button for above quote"></a>
+				</section>
+				<section class="players">
+					<img src="images/cleese3.jpg" alt="John Cleese">
+					<h2>John Cleese</h2>
+					<p>The great advantage of the tiger in unarmed combat is that he not only eats the raspberry-laden foe but also the raspberries.  The tiger however does not relish the peach.  The peach assailant should be attacked with a crocodile.</p>
+					<a><img src="images/play.png" alt="play button for above quote"></a>
+				</section>
+				<section class="players">
+					<img src="images/jones.jpg" alt="Terry Jones">
+					<h2>Terry Jones</h2>
+					<p>We us only the finest baby frogs, dew-picked and flown from Iraq, cleansed in finest-quality spring water, lightly killed, and then sealed in a succulent Swiss quintuple smooth treble cream milk chocolate envelope and lovingly frosted with glucose.</p>
+					<a><img src="images/play.png" alt="play button for above quote"></a>
+				</section>
 </body>
