--- a/MontyPython/index.html
+++ b/MontyPython/index.html
@@ -58,4 +58,15 @@
 					<p>We us only the finest baby frogs, dew-picked and flown from Iraq, cleansed in finest-quality spring water, lightly killed, and then sealed in a succulent Swiss quintuple smooth treble cream milk chocolate envelope and lovingly frosted with glucose.</p>
 					<a><img src="images/play.png" alt="play button for above quote"></a>
 				</section>
+				<section class="players">
+					<img src="idle2.jpg" alt="Eric Idle">
+					<h2>Eric Idle</h2>
+					<p>Is your wife a..."goer"... eh? Know what I mean?  Know what I mean?  Nudge nudge.  Nudge nudge!  Know what I mean?  Say no more...Know what I mean?</p>
+					<a><img src="images/play.png" alt="play button for above quote"></a>
+				</section>
+				<section class="players">
+					<img src="images/gilliam.jpg" alt="Terry Gilliam">
+					<h2>Terry Gilliam</h2>
+					<p>It's only a model...</p>
+					<a><img src="images/play.png" alt="play button for above quote"></a>
 </body>
