--- a/MontyPython/index.html
+++ b/MontyPython/index.html
@@ -59,7 +59,7 @@
 					<a><img src="images/play.png" alt="play button for above quote"></a>
 				</section>
 				<section class="players">
-					<img src="idle2.jpg" alt="Eric Idle">
+					<img src="images/idle2.jpg" alt="Eric Idle">
 					<h2>Eric Idle</h2>
 					<p>Is your wife a..."goer"... eh? Know what I mean?  Know what I mean?  Nudge nudge.  Nudge nudge!  Know what I mean?  Say no more...Know what I mean?</p>
 					<a><img src="images/play.png" alt="play button for above quote"></a>
