--- a/MontyPython2/index.html
+++ b/MontyPython2/index.html
@@ -8,10 +8,16 @@
 <body>
 	<div>
 	<section id="footer">
-	<p>And now for something complete different</p>
+	<p>And now for something completely different</p>
 	</section>
 	<section id="classnote">
 	<h1>A moose once bit my sister</h1>
-	<h2>No realli! She was Karving her initials on the moose with the sharpened end of an interspace toothbrush given her by Svenge - her brother-in-law - an Oslo dentist and star of many Norwegian movies: "The Hot Hands of an Oslo Dentist", "Fillings of Passion", "The Huge Molars of Horst Nordfink"...
-	Mynd you, moose bites Kan be pretti nasti...</h2>
-	
+	<p>No realli! She was Karving her initials on the moose with the sharpened end of an interspace toothbrush given her by Svenge - her brother-in-law - an Oslo dentist and star of many Norwegian movies: "The Hot Hands of an Oslo Dentist", "Fillings of Passion", "The Huge Molars of Horst Nordfink"...
+	Mynd you, moose bites Kan be pretti nasti...</p>
+	<a href="Learn more"></a>
+	</section>
+	<section id="classnote">
+	<h1>It's only a model</h1>
+	<p>We're Knights of the Round Table. We dance whene'er we're able. We do routines and chorus scenes with footwork impeccable. We dine well here in Camelot. We eat ham and jam and spam a lot. We're Knights of the Round Table. Our shows are formidable, but many times we're given rhymes that are quite unsingable. We're opera mad in Camelot. We sing from the diaphragm a lot.</p>
+	<a href="Act Now"></a>
+	</section>
