--- a/MontyPython2/index.html
+++ b/MontyPython2/index.html
@@ -14,7 +14,7 @@
 	<h1>A moose once bit my sister</h1>
 	<p>No realli! She was Karving her initials on the moose with the sharpened end of an interspace toothbrush given her by Svenge - her brother-in-law - an Oslo dentist and star of many Norwegian movies: "The Hot Hands of an Oslo Dentist", "Fillings of Passion", "The Huge Molars of Horst Nordfink"...
 	Mynd you, moose bites Kan be pretti nasti...</p>
-	<a href="#">Learn more></a>
+	<a href="#">Learn more</a>
 	</section>
 	<section id="classnote">
 	<h1>It's only a model</h1>
