--- a/MontyPython2/index.html
+++ b/MontyPython2/index.html
@@ -23,3 +23,4 @@
 	</section id="classnote">
 	<h1>It's probably pining for the fjords</h1>
 	<p>It's not pining, it's passed on. This parrot is no more! It has ceased to be. It's expired and gone to meet its maker.This is a late parrot. It's a stiff. Bereft of life, it rests in peace. If you hadn't nailed it to the perch it would be pushing up the daisies. It's rung down the curtain and joined the choir invisible. This is an ex-parrot.</p>
+	<a href="#">Find Out How</a>
