--- a/MontyPython2/index.html
+++ b/MontyPython2/index.html
@@ -20,9 +20,9 @@
 	<h1>It's only a model</h1>
 	<p>We're Knights of the Round Table. We dance whene'er we're able. We do routines and chorus scenes with footwork impeccable. We dine well here in Camelot. We eat ham and jam and spam a lot. We're Knights of the Round Table. Our shows are formidable, but many times we're given rhymes that are quite unsingable. We're opera mad in Camelot. We sing from the diaphragm a lot.</p>
 	<a href="#">Act Now</a>
-	</section id="classnote">
+	</section>
+	<section id="classnote">
 	<h1>It's probably pining for the fjords</h1>
 	<p>It's not pining, it's passed on. This parrot is no more! It has ceased to be. It's expired and gone to meet its maker.This is a late parrot. It's a stiff. Bereft of life, it rests in peace. If you hadn't nailed it to the perch it would be pushing up the daisies. It's rung down the curtain and joined the choir invisible. This is an ex-parrot.</p>
 	<a href="#">Find Out How</a>
 	</section>
-	
