--- a/MontyPython2/index.html
+++ b/MontyPython2/index.html
@@ -10,6 +10,8 @@
 	<section id="footer">
 	<p>And now for something completely different</p>
 	</section>
+	</div>
+	<div>
 	<section id="classnote">
 	<h1>A moose once bit my sister</h1>
 	<p>No realli! She was Karving her initials on the moose with the sharpened end of an interspace toothbrush given her by Svenge - her brother-in-law - an Oslo dentist and star of many Norwegian movies: "The Hot Hands of an Oslo Dentist", "Fillings of Passion", "The Huge Molars of Horst Nordfink"...
@@ -26,3 +28,4 @@
 	<p>It's not pining, it's passed on. This parrot is no more! It has ceased to be. It's expired and gone to meet its maker.This is a late parrot. It's a stiff. Bereft of life, it rests in peace. If you hadn't nailed it to the perch it would be pushing up the daisies. It's rung down the curtain and joined the choir invisible. This is an ex-parrot.</p>
 	<a href="#">Find Out How</a>
 	</section>
+	</div>
