--- a/MontyPython2/index.html
+++ b/MontyPython2/index.html
@@ -7,25 +7,31 @@
 </head>
 <body>
 	<div>
-	<section id="footer">
-	<p>And now for something completely different</p>
-	</section>
+		<section id="footer">
+		<p>And now for something completely different</p>
+		</section>
 	</div>
 	<div>
-	<section id="classnote">
-	<h1>A moose once bit my sister</h1>
-	<p>No realli! She was Karving her initials on the moose with the sharpened end of an interspace toothbrush given her by Svenge - her brother-in-law - an Oslo dentist and star of many Norwegian movies: "The Hot Hands of an Oslo Dentist", "Fillings of Passion", "The Huge Molars of Horst Nordfink"...
-	Mynd you, moose bites Kan be pretti nasti...</p>
-	<a href="#">Learn more</a>
-	</section>
-	<section id="classnote">
-	<h1>It's only a model</h1>
-	<p>We're Knights of the Round Table. We dance whene'er we're able. We do routines and chorus scenes with footwork impeccable. We dine well here in Camelot. We eat ham and jam and spam a lot. We're Knights of the Round Table. Our shows are formidable, but many times we're given rhymes that are quite unsingable. We're opera mad in Camelot. We sing from the diaphragm a lot.</p>
-	<a href="#">Act Now</a>
-	</section>
-	<section id="classnote">
-	<h1>It's probably pining for the fjords</h1>
-	<p>It's not pining, it's passed on. This parrot is no more! It has ceased to be. It's expired and gone to meet its maker.This is a late parrot. It's a stiff. Bereft of life, it rests in peace. If you hadn't nailed it to the perch it would be pushing up the daisies. It's rung down the curtain and joined the choir invisible. This is an ex-parrot.</p>
-	<a href="#">Find Out How</a>
-	</section>
+		<section id="classnote">
+		<h1>A moose once bit my sister</h1>
+		<p>No realli! She was Karving her initials on the moose with the sharpened end of an interspace toothbrush given her by Svenge - her brother-in-law - an Oslo dentist and star of many Norwegian movies: "The Hot Hands of an Oslo Dentist", "Fillings of Passion", "The Huge Molars of Horst Nordfink"...
+		Mynd you, moose bites Kan be pretti nasti...</p>
+		<a href="#">Learn more</a>
+		</section>
+		<section id="classnote">
+		<h1>It's only a model</h1>
+		<p>We're Knights of the Round Table. We dance whene'er we're able. We do routines and chorus scenes with footwork impeccable. We dine well here in Camelot. We eat ham and jam and spam a lot. We're Knights of the Round Table. Our shows are formidable, but many times we're given rhymes that are quite unsingable. We're opera mad in Camelot. We sing from the diaphragm a lot.</p>
+		<a href="#">Act Now</a>
+		</section>
+		<section id="classnote">
+		<h1>It's probably pining for the fjords</h1>
+		<p>It's not pining, it's passed on. This parrot is no more! It has ceased to be. It's expired and gone to meet its maker.This is a late parrot. It's a stiff. Bereft of life, it rests in peace. If you hadn't nailed it to the perch it would be pushing up the daisies. It's rung down the curtain and joined the choir invisible. This is an ex-parrot.</p>
+		<a href="#">Find Out How</a>
+		</section>
 	</div>
+	<div>
+		<section id="players">
+		<h1>Graham Chapman</h1>
+		<h2>May I take this opportunity of emphasizing that there is no cannibalism in the British Navy. Absolutely none, and when I say none, I mean there is a certain amount, more than we are prepared to admit, but all new ratings are warned that if they wake up in the morning and find any tooth marks at all anywhere on their bodies, they're to tell me immediately so that I can immediately take every measure to hush the whole thing up.</h2>
+		<img src="images/chapman.jpg" alt="Graham Chapman">
+		<img src="images/play.png" alt="Play">
