--- a/MontyPython2/index.html
+++ b/MontyPython2/index.html
@@ -35,3 +35,13 @@
 		<h2>May I take this opportunity of emphasizing that there is no cannibalism in the British Navy. Absolutely none, and when I say none, I mean there is a certain amount, more than we are prepared to admit, but all new ratings are warned that if they wake up in the morning and find any tooth marks at all anywhere on their bodies, they're to tell me immediately so that I can immediately take every measure to hush the whole thing up.</h2>
 		<img src="images/chapman.jpg" alt="Graham Chapman">
 		<img src="images/play.png" alt="Play">
+		</section>
+	</div>
+	<div>
+		<section id="players">
+		<h1>Michael Palin</h1>
+		<h2>Listen, strange women lying in ponds distributing swords is no basis for a system of government. Supreme executive power derives from a mandate from the masses, not from some farcical aquatic ceremony. Well you can't expect to wield supreme executive power just because some watery tart threw a sword at you. I mean, if I went 'round saying I was an emperor, just because some moistened bint had lobbed a scimitar at me, they'd put me away!</h2>
+		<img src="images/palin.jpg" alt="Michael Palin">
+		<img src="images/play.png" alt="Play">
+		</section>
+	</div>
