--- a/MontyPython2/index.html
+++ b/MontyPython2/index.html
@@ -50,3 +50,10 @@
 		<h1>John Cleese</h1>
 		<h2>The great advantage of the tiger in unarmed combat is that he not only eats the raspberry-laden foe but also the raspberries. The tiger however does not relish the peach. The peach assailant should be attacked with a crocodile.</h2>
 		<img src="images/play.png" alt="Play">
+		</section>
+		<section id="players">
+		<img src="images/jones.jpg" alt="Terry Jones">
+		<h1>Terry Jones</h1>
+		<h2>We us only the finest baby frogs, dew-picked and flown from Iraq, cleansed in finest-quality spring water, lightly killed, and then sealed in a succulent Swiss quintuple smooth treble cream milk chocolate envelope and lovingly frosted with glucose.</h2>
+		<img src="images/play.png" alt="Play">
+		</section>
