--- a/MontyPython2/index.html
+++ b/MontyPython2/index.html
@@ -57,3 +57,16 @@
 		<h2>We us only the finest baby frogs, dew-picked and flown from Iraq, cleansed in finest-quality spring water, lightly killed, and then sealed in a succulent Swiss quintuple smooth treble cream milk chocolate envelope and lovingly frosted with glucose.</h2>
 		<img src="images/play.png" alt="Play">
 		</section>
+		<section id="players">
+		<img src="images/idle2.jpg" alt="Eric Idle">
+		<h1>Eric Idle</h1>
+		<h2>Is your wife a..."goer"... eh? Know what I mean? Know what I mean? Nudge nudge. Nudge nudge! Know what I mean? Say no more...Know what I mean?</h2>
+		<img src="images/play.png" alt="Play">
+		</section>
+		<section id="players">
+		<img src="images/gilliam.jpg" alt="Terry Gilliam">
+		<h1>Terry Gilliam</h1>
+		<h2>It's only a model...</h2>
+		<img src="images/play.png" alt="Play">
+		</section>
+</body>
