--- a/MontyPython2/index.html
+++ b/MontyPython2/index.html
@@ -33,7 +33,7 @@
 		<section id="players">
 		<img src="images/chapman.jpg" alt="Graham Chapman">
 		<h1>Graham Chapman</h1>
-		<h2>May I take this opportunity of emphasizing that there is no cannibalism in the British Navy. Absolutely none, and when I say none, I mean there is a certain amount, more than we are prepared to admit, but all new ratings are warned that if they wake up in the morning and find any tooth marks at all anywhere on their bodies, they're to tell me immediately so that I can immediately take every measure to hush the whole thing up.</h2>
+		<p>May I take this opportunity of emphasizing that there is no cannibalism in the British Navy. Absolutely none, and when I say none, I mean there is a certain amount, more than we are prepared to admit, but all new ratings are warned that if they wake up in the morning and find any tooth marks at all anywhere on their bodies, they're to tell me immediately so that I can immediately take every measure to hush the whole thing up.</o>
 		<img src="images/play.png" alt="Play">
 		</section>
 	</div>
@@ -41,32 +41,32 @@
 		<section id="players">
 		<img src="images/palin.jpg" alt="Michael Palin">
 		<h1>Michael Palin</h1>
-		<h2>Listen, strange women lying in ponds distributing swords is no basis for a system of government. Supreme executive power derives from a mandate from the masses, not from some farcical aquatic ceremony. Well you can't expect to wield supreme executive power just because some watery tart threw a sword at you. I mean, if I went 'round saying I was an emperor, just because some moistened bint had lobbed a scimitar at me, they'd put me away!</h2>
+		<p>Listen, strange women lying in ponds distributing swords is no basis for a system of government. Supreme executive power derives from a mandate from the masses, not from some farcical aquatic ceremony. Well you can't expect to wield supreme executive power just because some watery tart threw a sword at you. I mean, if I went 'round saying I was an emperor, just because some moistened bint had lobbed a scimitar at me, they'd put me away!</p>
 		<img src="images/play.png" alt="Play">
 		</section>
 	</div>
 		<section id="players">
 		<img src="images/cleese3.jpg" alt="John Cleese">
 		<h1>John Cleese</h1>
-		<h2>The great advantage of the tiger in unarmed combat is that he not only eats the raspberry-laden foe but also the raspberries. The tiger however does not relish the peach. The peach assailant should be attacked with a crocodile.</h2>
+		<p>The great advantage of the tiger in unarmed combat is that he not only eats the raspberry-laden foe but also the raspberries. The tiger however does not relish the peach. The peach assailant should be attacked with a crocodile.</p>
 		<img src="images/play.png" alt="Play">
 		</section>
 		<section id="players">
 		<img src="images/jones.jpg" alt="Terry Jones">
 		<h1>Terry Jones</h1>
-		<h2>We us only the finest baby frogs, dew-picked and flown from Iraq, cleansed in finest-quality spring water, lightly killed, and then sealed in a succulent Swiss quintuple smooth treble cream milk chocolate envelope and lovingly frosted with glucose.</h2>
+		<p>We us only the finest baby frogs, dew-picked and flown from Iraq, cleansed in finest-quality spring water, lightly killed, and then sealed in a succulent Swiss quintuple smooth treble cream milk chocolate envelope and lovingly frosted with glucose.</p>
 		<img src="images/play.png" alt="Play">
 		</section>
 		<section id="players">
 		<img src="images/idle2.jpg" alt="Eric Idle">
 		<h1>Eric Idle</h1>
-		<h2>Is your wife a..."goer"... eh? Know what I mean? Know what I mean? Nudge nudge. Nudge nudge! Know what I mean? Say no more...Know what I mean?</h2>
+		<p>Is your wife a..."goer"... eh? Know what I mean? Know what I mean? Nudge nudge. Nudge nudge! Know what I mean? Say no more...Know what I mean?</p>
 		<img src="images/play.png" alt="Play">
 		</section>
 		<section id="players">
 		<img src="images/gilliam.jpg" alt="Terry Gilliam">
 		<h1>Terry Gilliam</h1>
-		<h2>It's only a model...</h2>
+		<p>It's only a model...</p>
 		<img src="images/play.png" alt="Play">
 		</section>
 </body>
