--- a/MontyPython2/index.html
+++ b/MontyPython2/index.html
@@ -33,7 +33,7 @@
 		<section id="players">
 		<img src="images/chapman.jpg" alt="Graham Chapman">
 		<h1>Graham Chapman</h1>
-		<p>May I take this opportunity of emphasizing that there is no cannibalism in the British Navy. Absolutely none, and when I say none, I mean there is a certain amount, more than we are prepared to admit, but all new ratings are warned that if they wake up in the morning and find any tooth marks at all anywhere on their bodies, they're to tell me immediately so that I can immediately take every measure to hush the whole thing up.</o>
+		<p>May I take this opportunity of emphasizing that there is no cannibalism in the British Navy. Absolutely none, and when I say none, I mean there is a certain amount, more than we are prepared to admit, but all new ratings are warned that if they wake up in the morning and find any tooth marks at all anywhere on their bodies, they're to tell me immediately so that I can immediately take every measure to hush the whole thing up.</p>
 		<img src="images/play.png" alt="Play">
 		</section>
 	</div>
