--- a/Oradellschools/index.html
+++ b/Oradellschools/index.html
@@ -1,4 +1,11 @@
 <html>
-
+<head>
+	<title>Oradellschools</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
 
 <body>
+	<section id="schools">
+	<h1>Oradell Public School</h1>
+	<img src="images/Oradell Public School.jpg">
+	</section>
