--- a/Oradellschools/index.html
+++ b/Oradellschools/index.html
@@ -7,5 +7,5 @@
 <body>
 	<section id="schools">
 	<h1>Oradell Public School</h1>
-	<img src="images/Oradell Public School.jpg">
+	<img src="images/oradellpublicschool.jpg">
 	</section>
