--- a/Oradellschools/index.html
+++ b/Oradellschools/index.html
@@ -9,3 +9,7 @@
 	<h1>Oradell Public School</h1>
 	<img src="images/oradellpublicschool.jpg">
 	</section>
+	<section id="schools">
+	<h1>River Dell Middle School</h1>
+	<img src="images/riverdellmiddleschool.jpg">
+	</section>
