--- a/Oradellschools/index.html
+++ b/Oradellschools/index.html
@@ -13,3 +13,7 @@
 	<h1>River Dell Middle School</h1>
 	<img src="images/riverdellmiddleschool.jpg">
 	</section>
+	<section id="schools">
+	<h1>River Dell High School</h1>
+	<img src="images/riverdellhighschool.jpg">
+	
