--- a/Oradellschools/index.html
+++ b/Oradellschools/index.html
@@ -17,3 +17,17 @@
 	<h1>River Dell High School</h1>
 	<img src="images/riverdellhighschool.jpg">
 	</section>
+	<section id="principal">
+	<h1>Megan Bozios</h1>
+	<h2>Principal</h2>
+	<h3>Oradell Public School</h3>
+	</section>
+	<section id="principal">
+	<h1>Richard Freedman</h1>
+	<h2>Middle School Principal</h2>
+	</section>
+	<section id="principal">
+	<h1>Lorraine Brooks</h1>
+	<h2>High School Principal</h2>
+	</section>
+	
