--- a/Oradellschools/index.html
+++ b/Oradellschools/index.html
@@ -32,3 +32,14 @@
 		<h2>High School Principal</h2>
 		</section>
 	</div>
+		<section id="superintendent">
+		<h1>Matt Wilson</h1>
+		<h2>Superintendent</h2>
+		<h2>Oradell Public School District</h2>
+		</section>
+		<section id="superintendent">
+		<h1>Patrick Fletcher</h1>
+		<h2>Superintendent</h2>
+		<h2>River Dell Regional School District</h2>
+		</section>
+	</body>
