--- a/Oradellschools/index.html
+++ b/Oradellschools/index.html
@@ -18,7 +18,11 @@
 	<img src="images/riverdellhighschool.jpg">
 	</section>
 	<div>
-		
+		<section id="principal">
+		<h1>Megan Bozios</h1>
+		<h2>Principal</h2>
+		<h3>Oradell Public School</h3>
+		</section>
 		<section id="principal">
 		<h1>Richard Freedman</h1>
 		<h2>Middle School Principal</h2>
