--- a/MontyPython2/index.html
+++ b/MontyPython2/index.html
@@ -7,60 +7,60 @@
 </head>
 <body>
 	<div>
-		<section id="footer">
+		<section class="footer">
 		<p>And now for something completely different</p>
 		</section>
 	</div>
 	<div>
-		<section id="classnote">
+		<section class="classnote">
 		<h1>A moose once bit my sister</h1>
 		<p>No realli! She was Karving her initials on the moose with the sharpened end of an interspace toothbrush given her by Svenge - her brother-in-law - an Oslo dentist and star of many Norwegian movies: "The Hot Hands of an Oslo Dentist", "Fillings of Passion", "The Huge Molars of Horst Nordfink"...
 		Mynd you, moose bites Kan be pretti nasti...</p>
 		<a href="#">Learn more</a>
 		</section>
-		<section id="classnote">
+		<section class="classnote">
 		<h1>It's only a model</h1>
 		<p>We're Knights of the Round Table. We dance whene'er we're able. We do routines and chorus scenes with footwork impeccable. We dine well here in Camelot. We eat ham and jam and spam a lot. We're Knights of the Round Table. Our shows are formidable, but many times we're given rhymes that are quite unsingable. We're opera mad in Camelot. We sing from the diaphragm a lot.</p>
 		<a href="#">Act Now</a>
 		</section>
-		<section id="classnote">
+		<section class="classnote">
 		<h1>It's probably pining for the fjords</h1>
 		<p>It's not pining, it's passed on. This parrot is no more! It has ceased to be. It's expired and gone to meet its maker.This is a late parrot. It's a stiff. Bereft of life, it rests in peace. If you hadn't nailed it to the perch it would be pushing up the daisies. It's rung down the curtain and joined the choir invisible. This is an ex-parrot.</p>
 		<a href="#">Find Out How</a>
 		</section>
 	</div>
 	<div>
-		<section id="players"><img src="images/chapman.jpg" alt="Graham Chapman"><h1>Graham Chapman</h1><p>May I take this opportunity of emphasizing that there is no cannibalism in the British Navy. Absolutely none, and when I say none, I mean there is a certain amount, more than we are prepared to admit, but all new ratings are warned that if they wake up in the morning and find any tooth marks at all anywhere on their bodies, they're to tell me immediately so that I can immediately take every measure to hush the whole thing up.</p>
+		<section class="players"><img src="images/chapman.jpg" alt="Graham Chapman"><h1>Graham Chapman</h1><p>May I take this opportunity of emphasizing that there is no cannibalism in the British Navy. Absolutely none, and when I say none, I mean there is a certain amount, more than we are prepared to admit, but all new ratings are warned that if they wake up in the morning and find any tooth marks at all anywhere on their bodies, they're to tell me immediately so that I can immediately take every measure to hush the whole thing up.</p>
 		<img src="images/play.png" alt="Play">
 		</section>
 	</div>
 	<div>
-		<section id="players">
+		<section class="players">
 		<img src="images/palin.jpg" alt="Michael Palin">
 		<h1>Michael Palin</h1>
 		<p>Listen, strange women lying in ponds distributing swords is no basis for a system of government. Supreme executive power derives from a mandate from the masses, not from some farcical aquatic ceremony. Well you can't expect to wield supreme executive power just because some watery tart threw a sword at you. I mean, if I went 'round saying I was an emperor, just because some moistened bint had lobbed a scimitar at me, they'd put me away!</p>
 		<img src="images/play.png" alt="Play">
 		</section>
 	</div>
-		<section id="players">
+		<section class="players">
 		<img src="images/cleese3.jpg" alt="John Cleese">
 		<h1>John Cleese</h1>
 		<p>The great advantage of the tiger in unarmed combat is that he not only eats the raspberry-laden foe but also the raspberries. The tiger however does not relish the peach. The peach assailant should be attacked with a crocodile.</p>
 		<img src="images/play.png" alt="Play">
 		</section>
-		<section id="players">
+		<section class="players">
 		<img src="images/jones.jpg" alt="Terry Jones">
 		<h1>Terry Jones</h1>
 		<p>We us only the finest baby frogs, dew-picked and flown from Iraq, cleansed in finest-quality spring water, lightly killed, and then sealed in a succulent Swiss quintuple smooth treble cream milk chocolate envelope and lovingly frosted with glucose.</p>
 		<img src="images/play.png" alt="Play">
 		</section>
-		<section id="players">
+		<section class="players">
 		<img src="images/idle2.jpg" alt="Eric Idle">
 		<h1>Eric Idle</h1>
 		<p>Is your wife a..."goer"... eh? Know what I mean? Know what I mean? Nudge nudge. Nudge nudge! Know what I mean? Say no more...Know what I mean?</p>
 		<img src="images/play.png" alt="Play">
 		</section>
-		<section id="players">
+		<section class="players">
 		<img src="images/gilliam.jpg" alt="Terry Gilliam">
 		<h1>Terry Gilliam</h1>
 		<p>It's only a model...</p>
