--- a/Oradellschools/index.html
+++ b/Oradellschools/index.html
@@ -33,6 +33,7 @@
 		<h2>High School Principal</h2>
 		</section>
 	</div>
+	<div>
 		<section class="superintendent">
 		<h1>Matt Wilson</h1>
 		<h2>Superintendent</h2>
@@ -43,4 +44,5 @@
 		<h2>Superintendent</h2>
 		<h2>River Dell Regional School District</h2>
 		</section>
+	</div>
 	</body>
