--- a/Oradellschools/index.html
+++ b/Oradellschools/index.html
@@ -35,11 +35,14 @@
 	</div>
 	<div>
 		<section class="superintendent">
+		
 		<h1>Matt Wilson</h1>
 		<h2>Superintendent</h2>
 		<h2>Oradell Public School District</h2>
+		<img src="images/mattwilson.jpg">
 		</section>
 		<section class="superintendent">
+		<img src="images/patrickfletcher.jpeg">
 		<h1>Patrick Fletcher</h1>
 		<h2>Superintendent</h2>
 		<h2>River Dell Regional School District</h2>
