--- a/Oradellschools/index.html
+++ b/Oradellschools/index.html
@@ -35,13 +35,13 @@
 	</div>
 	<div>
 		<section class="superintendent">
-		<img src="images/mattwilson.jpg">
+		<img src="images/mattwilson.jpg" alt="Matt Wilson">
 		<h1>Matt Wilson</h1>
 		<h2>Superintendent</h2>
 		<h2>Oradell Public School District</h2>
 		</section>
 		<section class="superintendent">
-		<img src="images/patrickfletcher.jpeg">
+		<img src="images/patrickfletcher.jpeg" alt="Patrick Fletcher">
 		<h1>Patrick Fletcher</h1>
 		<h2>Superintendent</h2>
 		<h2>River Dell Regional School District</h2>
