--- a/Oradellschools/index.html
+++ b/Oradellschools/index.html
@@ -41,7 +41,7 @@
 		<h2>Oradell Public School District</h2>
 		</section>
 		<section class="superintendent">
-		<img src="images/patrickfletcher.jpeg" alt="Patrick Fletcher">
+		<img src="images/patrickfletcher.jpeg" width="10px" height="20px" alt="Patrick Fletcher">
 		<h1>Patrick Fletcher</h1>
 		<h2>Superintendent</h2>
 		<h2>River Dell Regional School District</h2>
