--- a/Oradellschools/index.html
+++ b/Oradellschools/index.html
@@ -7,15 +7,21 @@
 <body>
 	<section class="schools">
 	<h1>Oradell Public School</h1>
+	<a href="www.oradell.k12.nj.us">
 	<img src="images/oradellpublicschool.jpg">
+	</a>
 	</section>
 	<section class="schools">
 	<h1>River Dell Middle School</h1>
+	<a href="riverdell.org/rdms">
 	<img src="images/riverdellmiddleschool.jpg">
+	</a>
 	</section>
 	<section class="schools">
 	<h1>River Dell High School</h1>
+	<a href="riverdell.org/rdhs">
 	<img src="images/riverdellhighschool.jpg">
+	</a>
 	</section>
 	
 	<div>
