--- a/Oradellschools/index.html
+++ b/Oradellschools/index.html
@@ -7,19 +7,19 @@
 <body>
 	<section class="schools">
 	<h1>Oradell Public School</h1>
-	<a href="www.oradell.k12.nj.us">
+	<a href="www.oradell.k12.nj.us" alt="Oradell Public School">
 	<img src="images/oradellpublicschool.jpg">
 	</a>
 	</section>
 	<section class="schools">
 	<h1>River Dell Middle School</h1>
-	<a href="riverdell.org/rdms">
+	<a href="riverdell.org/rdms" alt="River Dell Middle School">
 	<img src="images/riverdellmiddleschool.jpg">
 	</a>
 	</section>
 	<section class="schools">
 	<h1>River Dell High School</h1>
-	<a href="riverdell.org/rdhs">
+	<a href="riverdell.org/rdhs" alt="River Dell High School">
 	<img src="images/riverdellhighschool.jpg">
 	</a>
 	</section>
