--- a/Oradellschools/index.html
+++ b/Oradellschools/index.html
@@ -13,13 +13,13 @@
 	</section>
 	<section class="schools">
 	<h1>River Dell Middle School</h1>
-	<a href="riverdell.org/rdms" alt="River Dell Middle School">
+	<a href="River Dell Middle School _ Overview.html" alt="River Dell Middle School">
 	<img src="images/riverdellmiddleschool.jpg">
 	</a>
 	</section>
 	<section class="schools">
 	<h1>River Dell High School</h1>
-	<a href="riverdell.org/rdhs" alt="River Dell High School">
+	<a href="River Dell High School _ Overview.html" alt="River Dell High School">
 	<img src="images/riverdellhighschool.jpg">
 	</a>
 	</section>
