--- a/Oradellschools/index.html
+++ b/Oradellschools/index.html
@@ -7,7 +7,7 @@
 <body>
 	<section class="schools">
 	<h1>Oradell Public School</h1>
-	<a href="www.oradell.k12.nj.us" alt="Oradell Public School">
+	<a href="Oradell School - Oradell, New Jersey.html" alt="Oradell Public School">
 	<img src="images/oradellpublicschool.jpg">
 	</a>
 	</section>
@@ -26,15 +26,18 @@
 	
 	<div>
 		<section class="principal">
+		<img src="images/Meganbozios.jpg" alt="Megan Bozios">
 		<h1>Megan Bozios</h1>
 		<h2>Principal</h2>
 		<h3>Oradell Public School</h3>
 		</section>
 		<section class="principal">
+		<img src="images/richardfreedman.jpg">
 		<h1>Richard Freedman</h1>
 		<h2>Middle School Principal</h2>
 		</section>
 		<section class="principal">
+		<img src="images/lorrainebrooks.JPG">
 		<h1>Lorraine Brooks</h1>
 		<h2>High School Principal</h2>
 		</section>
