--- a/Oradellschools/index.html
+++ b/Oradellschools/index.html
@@ -32,12 +32,12 @@
 		<h3>Oradell Public School</h3>
 		</section>
 		<section class="principal">
-		<img src="images/richardfreedman.jpg">
+		<img src="images/richardfreedman.jpg" alt="Richard Freedman">
 		<h1>Richard Freedman</h1>
 		<h2>Middle School Principal</h2>
 		</section>
 		<section class="principal">
-		<img src="images/lorrainebrooks.JPG">
+		<img src="images/lorrainebrooks.JPG" alt="Lorraine Brooks">
 		<h1>Lorraine Brooks</h1>
 		<h2>High School Principal</h2>
 		</section>
